# nonebot-plugin-bawiki

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
.github/workflows/: black.yml  pypi-publish.yml
demo/: grab_gamekee_l2d.py  grab_voice.py
nonebot_plugin_bawiki/: __init__.py  __main__.py  compat.py  config.py  const.py  data_bawiki.py  data_gamekee.py  data_schaledb.py  data_source.py  gacha.py  resource.py  test.py  util.py
nonebot_plugin_bawiki/command/: __init__.py  arona.py  calender.py  clear_cache.py  craft.py  emoji.py  event.py  furniture.py  gacha.py  global_future.py  level_guide.py  logo_generate.py  manga.py  raid.py  raid_data_cn.py  raid_rank.py  stu_fav.py  stu_rank.py  stu_wiki_gamekee.py  stu_wiki_schale.py  time_atk.py  update_future.py  voice.py
nonebot_plugin_bawiki/data/: arona.py  bawiki.py  gacha.py  gamekee.py  logo_generate.py  playwright.py  schaledb.py  shittim_chest.py
nonebot_plugin_bawiki/help/: __init__.py  const.py  manual.py  pic_menu.py
nonebot_plugin_bawiki/res/: calender.html.jinja
nonebot_plugin_bawiki/resource/: __init__.py
nonebot_plugin_bawiki/resource/res/gamekee/: gamekee_util.js
nonebot_plugin_bawiki/resource/res/logo/: ba_logo.js
nonebot_plugin_bawiki/resource/res/schale/: schale_util.css  schale_util.js
nonebot_plugin_bawiki/resource/res/shittim/: shittim_raid_rank.html
nonebot_plugin_bawiki/resource/res/shittim/css/: shittim.css  shittim_util.css
nonebot_plugin_bawiki/resource/res/shittim/js/: shittim_util.js
nonebot_plugin_bawiki/resource/res/shittim/templates/: base.html.jinja  components.html.jinja  content_raid_rank.html.jinja  content_rank_detail.html.jinja
nonebot_plugin_bawiki/resource/res/web/: ba_logo.js  shittim.css  shittim_raid_rank.html
util/: grab_gamekee_l2d.py  爬取gamekee角色介绍页面l2d.py
