[project]
name = "nonebot-plugin-bawiki"
dynamic = ["version"]
description = "A nonebot2 plugin for Blue Archive."
authors = [{ name = "student_2333", email = "lgc2333@126.com" }]
dependencies = [
    "nonebot2>=2.2.0",
    "pydantic>=1.10.0,<3.0.0,!=2.5.0,!=2.5.1",
    "nonebot-adapter-onebot>=2.3.1",
    "nonebot-plugin-htmlrender>=0.2.2",
    "nonebot-plugin-apscheduler>=0.3.0",
    "beautifulsoup4>=4.11.1",
    "lxml>=4.9.1",
    "pil-utils>=0.1.4",
    "httpx>=0.24",
    "pypinyin>=0.49.0",
    "yarl>=1.9.2",
    "async-lru>=2.0.4",
    "matplotlib>=3.7.4",
    "pytz>=2023.3.post1",
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = { text = "MIT" }
keywords = ["blue archive", "nonebot", "nonebot2", "bot", "qq"]
classifiers = [
    "Natural Language :: Chinese (Simplified)",
    "Topic :: Communications",
    "Topic :: Communications :: Chat",
    "Topic :: Communications :: Chat :: ICQ",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Games/Entertainment :: Turn Based Strategy",
    "Topic :: Games/Entertainment :: Side-Scrolling/Arcade Games",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Wiki",
]

[project.urls]
homepage = "https://github.com/lgc2333/nonebot-plugin-bawiki/"

[project.optional-dependencies]
menu = ["nonebot-plugin-PicMenu>=0.2"]

[tool.pdm.version]
source = "file"
path = "nonebot_plugin_bawiki/__init__.py"

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
defineConstant = { PYDANTIC_V2 = true }
