[project]
name = "nonebot-plugin-bawiki"
dynamic = ["version"]
description = "A nonebot2 plugin for Blue Archive."
authors = [{ name = "LgCookie", email = "lgc2333@126.com" }]
dependencies = [
    "nonebot2>=2.3.1",
    "nonebot-adapter-onebot>=2.4.3",
    "nonebot-plugin-htmlrender>=0.3.2",
    "nonebot-plugin-apscheduler>=0.5.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.2",
    "pil-utils>=0.1.10",
    "httpx>=0.27.0",
    "pypinyin>=0.51.0",
    "yarl>=1.9.4",
    "async-lru>=2.0.4",
    "matplotlib>=3.9.0",
    "pytz>=2024.1",
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = { text = "MIT" }
keywords = ["blue archive", "nonebot", "nonebot2", "bot", "qq"]
classifiers = [
    "Natural Language :: Chinese (Simplified)",
    "Topic :: Communications",
    "Topic :: Communications :: Chat",
    "Topic :: Communications :: Chat :: ICQ",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Games/Entertainment :: Turn Based Strategy",
    "Topic :: Games/Entertainment :: Side-Scrolling/Arcade Games",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Wiki",
]

[project.urls]
homepage = "https://github.com/lgc2333/nonebot-plugin-bawiki/"

[project.optional-dependencies]
menu = [
    "nonebot-plugin-PicMenu>=0.2",
]

[tool.pdm.version]
source = "file"
path = "nonebot_plugin_bawiki/__init__.py"

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
